feature - upgrade to Java 17 LTS