@@ -26,11 +26,11 @@ plugins {
     id 'maven-publish'
     id 'signing'
     id "jacoco"
-    id "com.github.spotbugs" version "4.7.2"
+    id "com.github.spotbugs" version "4.7.5"
     id "org.sonarqube" version "3.3"
-    id 'org.sonatype.gradle.plugins.scan' version '2.0.12'
+    id 'org.sonatype.gradle.plugins.scan' version '2.1.0'
     id "info.solidsoft.pitest" version "1.6.0"
-    id 'com.google.cloud.tools.jib' version '3.1.2'
+    id 'com.google.cloud.tools.jib' version '3.1.4'
     id 'com.github.ben-manes.versions' version '0.39.0'
 }
 
@@ -152,7 +152,7 @@ tasks.register("jacocoRootReport", JacocoReport) {
 subprojects {
     java {
         toolchain {
-            languageVersion = JavaLanguageVersion.of(17)
+            languageVersion = JavaLanguageVersion.of(16)
         }
         withJavadocJar()
         withSourcesJar()
@@ -197,7 +197,7 @@ subprojects {
     tasks.withType(Test) {
         finalizedBy jacocoTestReport
         useJUnitPlatform()
-        jvmArgs += ['--enable-preview']
+        jvmArgs += ['--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED', '--enable-preview', '-XX:+ShowCodeDetailsInExceptionMessages']
         reports.junitXml.mergeReruns = true
         options {
             setExcludeTags(['integration'] as Set)
@@ -212,12 +212,12 @@ subprojects {
             encoding("UTF-8")
             addBooleanOption('-Xdoclint:none')
             addBooleanOption('-enable-preview', true)
-            addStringOption('-release', '17')
+            addStringOption('-release', '16')
         }
     }
 
     tasks.withType(JavaExec) {
-        jvmArgs += ['--enable-preview', '-XX:+ShowCodeDetailsInExceptionMessages']
+        jvmArgs += ['--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED', '--enable-preview', '-XX:+ShowCodeDetailsInExceptionMessages']
     }
 
     jar {
