@@ -1,20 +1,19 @@
 /*
  * Copyright 2006-2021 Marcel Baumann
  *
- *  Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain
- *  a copy of the License at
+ * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of
+ * the License at
  *
  *          http://www.apache.org/licenses/LICENSE-2.0
  *
- *  Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
- *  WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations
- *  under the License.
+ * Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES
+ * OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
  */
 
 plugins {
     id "java"
     id "application"
-    id "com.vaadin" version "20.0.4"
+    id "com.vaadin" version "21.0.0"
 }
 
 project.ext.groupId = 'net.tangly.erp'
@@ -22,13 +21,14 @@ project.ext.artifactId = 'ui'
 project.version = "0.2.6"
 project.ext.moduleName = "${project.ext.groupId}.${project.ext.artifactId}"
 project.ext.inceptionYear = '1996'
-project.description = "User Interface ERP - using Java 16 or higher (tangly llc)"
+project.description = "User Interface ERP - using Java 17 or higher (tangly llc)"
 
 ext {
-    jettyVersion = "9.4.42.v20210604"
+    jettyVersion = "9.4.43.v20210629"
 }
 
 application {
+    applicationDefaultJvmArgs = ['--enable-preview', '--add-exports java.base/jdk.internal.misc=ALL_UNNAMED']
     mainClassName = "net.tangly.erp.ui.EmbeddedJetty"
 }
 
@@ -59,6 +59,8 @@ dependencies {
     }
     implementation(libs.microstream.storage)
     implementation(libs.vaadin.socharts)
+
+    implementation(libs.bundles.jersey.deps)
 
     testImplementation(libs.vaadin.test)
 }
